# AI-Product-Research-Agent

./: .gitignore  README.md  agent_orchestrator.py  data_indexer.py  main.py  pyproject.toml  research_dashboard.py  search_tools.py  vector_db_client.py
notebook/: research.ipynb
